app/assets/stylesheets/_sidebars.scss
.sidebar {
	h2, h3 {
		@extend %block-heading;
	}
	aside {
		@extend %shadow;
		background: #fff;
	}
	.badge-why {
		@extend .pull-left;
		clear: both;
	}
	.large-badge {
		margin-bottom: 10px;
	}
}

.top-hustlers {
	padding: 25px;
	h4 {
		font-size: 19px;
		font-weight: 300;
		margin: 0 0 3px;
	}
	h5 {
		font-size: 14px;
		margin: 0 0 3px;
	}
}

.hustler-photo {
	@extend .pull-left;
	@extend %profile-photo;
}

.invite-photo {
	width: 100%;
	img {
		width: 100%;
	}
}

.invite-text {
	padding: 25px;
	text-align: center;
	h6 {
		font-size: 19px;
		font-weight: 300;
	}
	.btn {
		margin-top: 10px;
	}
}

.badge-list {
	padding: 0 10px 10px;
	section {
		margin-left: 0;
		margin-right: 0;
	}
	div + div {
		border-top: 1px solid $brand-gray;
		padding-top: 15px;
		margin-top: 15px;
	}
	.row {
		margin: 0 20px;
	}
	p {
		text-align: center;
	}
	.wrapper & .well {
		padding: 0;
		margin: 0;
	}
}

.badge-category {
	section {
		@extend .pull-left;
		width: 33%;
	}
	p {
		font-size: 11px;
		line-height: 1;
		margin-bottom: 10px;
	}
	.large-badge {
		margin: 0 auto 5px;
		overflow: hidden;
	}
	.category-title {
		font-size: $font-size-base;
	}
	.row {
		margin: 0;
	}
}

.badge-category {
	section {
		@extend .pull-left;
		width: 33%;
	}
	p {
		font-size: 11px;
		line-height: 1;
		margin-bottom: 20px;
	}
	.large-badge {
		margin: 0 auto 5px;
		overflow: hidden;
	}
	.category-title {
		font-size: $font-size-base;
	}
}

.well {
	h2 {
		margin-bottom: 20px;
	}
}

